--- a/index_style.css
+++ b/index_style.css
@@ -23,14 +23,13 @@ body {
 .leftside {
     width: 100%;
     height: 900px;
+    min-width: 400px;
 
     display: flex;
     flex-flow: column nowrap;
     align-items:flex-start;
     justify-content: flex-end;
     flex-grow: 1;
-
-    /* border: 2px solid red; */
 }
 .leftside .logo{
     display: flex;
@@ -49,10 +48,11 @@ body {
     bottom: 350px;
 }
 .leftside .logo h1{
+    position: relative;
     font-family: logo-font, sans-serif;
     font-size: xxx-large;
     color: #dc782e;
-    margin-left: -500px;
+    
 }
 .leftside p{
     background-color: transparent;
@@ -141,7 +141,9 @@ body {
     position: relative;
     top: 20px;
     left: 50px;
-    border-radius: 120px/100px;
+    border-radius: 5px;
+    border: none;
+    box-shadow: 0.4rem 0.4rem 0.5rem lightgrey;
 }
 
 .section3 p {
